# SNOMEDToOWL

./: .gitignore  AUTHORS  ChangeLog  Modules.md  Pipfile  README.md  requirements.txt  setup.cfg  setup.py  snomed_value_sets.md
SNOMEDCTToOWL/: CompareRDF.py  Modules.py  OWLGraphHelper.py  RF2Filter.py  SNOMEDToOWL.py  SNOMEDToOWLConstants.py  Statistics.py  TransformationContext.py  __init__.py
SNOMEDCTToOWL/RF2Files/: Concept.py  Description.py  DirectoryWalker.py  Language.py  RF2DictWriter.py  RF2File.py  Relationship.py  Transitive.py  __init__.py
SNOMEDCTToOWL/RF2Files/utils/: RF2Filter.py
SNOMEDCTToOWL/conf/: conf.json  sct_core_gb.json  sct_core_us.json  sct_core_us_edition_variant_us_inferred.json  sct_core_us_gb.json  sct_core_us_gb_skos.json  sct_core_us_inferred.json  sct_metadata_us_gb.json  us_edition_us_inferred.json
scripts/: CompareRDF  CompareRDF.md  Modules  OWLCompare  OWLRefsetToOWL.sh  RF2Filter  RF2Filter.md  SNOMEDToOWL  SNOMEDToOWL.md  modifiedPerlScript.pl  tls2_StatedRelationshipsToOwlKRSS_Script_INT_20160731.pl
test/: test_rf2_dicom.py  test_suspected_lung_cancer.py
test/conf/: en_intl.json  en_intl_inferred.json
test/data/: en_all_intl.json  en_intl.json
test/data/FSNChange/Terminology/: sct2_Concept_Snapshot_US1000124_20160301.txt  sct2_Description_Snapshot-en_US1000124_20160301.txt  sct2_Relationship_Snapshot_US1000124_20160301.txt  sct2_StatedRelationship_Snapshot_US1000124_20160301.txt
test/data/Snapshot/Terminology/: sct2_Concept_Snapshot_INT_20160731.txt  sct2_Description_Snapshot-en_INT_20160731.txt  sct2_Relationship_Snapshot_INT_20160731.txt  sct2_StatedRelationship_Snapshot_INT_20160731.txt
test/data/dicom/: Dicom_Subset_20170131_v1_00.csv  Snapshot
test/data/slc/: conf.json
test/data/slc/output/: slc.owl
test/data/vp/Terminology/: sct2_Concept_Snapshot_INT_20160731.txt  sct2_Description_Snapshot-en_INT_20160731.txt  sct2_Relationship_Snapshot_INT_20160731.txt  sct2_StatedRelationship_Snapshot_INT_20160731.txt
test/output/test_data/: snomedct_owl.owl  snomedct_owl.ttl  snomedct_owl_addl_concept.ttl  snomedct_owl_modified_concepts.ttl
(+21 files in other folders)
