[metadata]
name = SNOMEDToOWL
url = https://github.com/hsolbrig/SNOMEDToOWL
author = Harold Solbrig
author-email = solbrig@jhu.edu
summary = "Spackman OWL" transformation test and validation tool
description = Document and test SNOMED RF2 to OWL transformations
license = CC0 1.0 Universal
python-requires = >=3.7
classifiers =
    Development Status :: 6 - Mature
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Intended Audience :: Healthcare Industry
    License :: CC0 1.0 Universal (CC0 1.0) Public Domain Dedication
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
keywords =
    SNOMED
    OWL
    RF2

[options]
packages =
    SNOMEDCTToOWL
include_package_data = True

[entry_points]
console_scripts =
    CompareRDF = SNOMEDCTToOWL.CompareRDF:main
    RF2Filter = SNOMEDCTToOWL.RF2Filter:main
    SNOMEDToOWL = SNOMEDCTToOWL.SNOMEDToOWL:main
    Modules = SNOMEDCTToOWL.Modules:main

